# cmd/docs/v2/swagger.json
@@ -401,7 +401,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservation"
+                    "Lessee"
                 ],
                 "summary": "Create a New Lease Reservation",
                 "parameters": [
@@ -447,7 +447,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservation"
+                    "Lessee"
                 ],
                 "summary": "Delete a Lease Reservation",
                 "parameters": [
@@ -497,7 +497,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservation"
+                    "Lessee"
                 ],
                 "summary": "Update an Existing Lease Reservation",
                 "parameters": [
@@ -546,9 +546,9 @@
                 }
             }
         },
-        "/lessee/{id}": {
-            "put": {
-                "description": "Approves a lease reservation using the reservation ID provided in the URL.",
+        "/lessor/accept/{id}": {
+            "post": {
+                "description": "Accept a reservation by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -556,9 +556,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservation"
+                    "Lessor"
                 ],
-                "summary": "Approve a Lease Reservation",
+                "summary": "Accept a reservation",
                 "parameters": [
                     {
                         "type": "integer",
@@ -566,20 +566,11 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Reservation Status",
-                        "name": "reservation",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ApproveReservation"
-                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Reservation approved successfully",
+                        "description": "Reservation accepted successfully",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
@@ -590,14 +581,52 @@
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
-                    "404": {
-                        "description": "Reservation not found",
+                    "500": {
+                        "description": "Failed to accept reservation",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/lessor/decline/{id}": {
+            "post": {
+                "description": "Decline a reservation by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Lessor"
+                ],
+                "summary": "Decline a reservation",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Reservation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Reservation declined successfully",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid reservation ID",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "Failed to decline reservation",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
@@ -1174,15 +1203,6 @@
         }
     },
     "definitions": {
-        "dtos.ApproveReservation": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string",
-                    "example": "approved"
-                }
-            }
-        },
         "dtos.CreateReservation": {
             "type": "object",
             "properties": {
